Fix Grid rows overflow

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -1420,6 +1420,7 @@ progress {
 .container {
   width: 90%;
   margin: 0 auto;
+  padding: 0 0.5rem;
 }
 
 @media (min-width: 576px) {
